--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-coursera
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="styles.css" rel ="stylesheet" type="text/css" />
+    </head>
+
+    <body>
+        <p id="menu" > Our Menu</p>
+        <div id="container">
+            <div class="bs-3" id="o1">
+                <p class="head" id="m1"> Shushi</p>
+                <p class="content">
+                    Once you turn an element into a flex container, there are a few properties you
+                    can set on that container to control how items flow within it. The flow refers
+                    to the direction in which flex items are laid out as well as whether they are
+                    permitted to wrap onto additional lines.
+                </p>
+            </div>
+
+            <div class="bs-3" id="o2">
+                <p class="head" id="m2"> Meat</p>
+                <p class="content">
+                    Once you turn an element into a flex container, there are a few properties you
+                    can set on that container to control how items flow within it. The flow refers
+                    to the direction in which flex items are laid out as well as whether they are
+                    permitted to wrap onto additional lines.
+                </p>
+            </div>
+
+            <div class="bs-3" id="o3">
+                <p class="head" id="m3"> Shushi</p>
+                <p class="content">
+                    Once you turn an element into a flex container, there are a few properties you
+                    can set on that container to control how items flow within it. The flow refers
+                    to the direction in which flex items are laid out as well as whether they are
+                    permitted to wrap onto additional lines.
+                </p>
+            </div>
+
+        </div>
+    </body>
+</html>
