--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="styles.css" rel ="stylesheet" type="text/css" />
+        <link href="C:\Users\Pskpr\OneDrive\Desktop\web-project\Coursera\module 2\psk001.github.io\styles.css" rel ="stylesheet" type="text/css" >
     </head>
 
     <body>
